// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TxStatusModal should show completed status 1`] = `
<div>
  <dialog
    class="overlay"
  >
    <div
      class="success"
    >
      <div
        class="transparent"
      >
        Identicon
      </div>
    </div>
    <h1
      class="heading"
    >
      Your transaction was successful
    </h1>
    <a
      class="confirm"
      href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo"
    >
      OK
    </a>
  </dialog>
</div>
`;

exports[`TxStatusModal should show error status 1`] = `
<div>
  <dialog
    class="overlay"
  >
    <div
      class="error"
    >
      <div
        class="transparent"
      >
        Identicon
      </div>
    </div>
    <h1
      class="heading"
    >
      Your transaction has failed
    </h1>
    <button
      class="confirm"
    >
      OK
    </button>
    <a
      class="status"
      href="https://status.kilt.io/"
      rel="noreferrer"
      target="_blank"
    >
      Check Status on status.kilt.io
    </a>
  </dialog>
</div>
`;

exports[`TxStatusModal should show pending status 1`] = `
<div>
  <dialog
    class="overlay"
  >
    <div
      class="transparent"
    >
      Identicon
    </div>
    <h1
      class="heading"
    >
      Your transaction is being processed
    </h1>
    <a
      class="confirm"
      href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo"
    >
      OK
    </a>
  </dialog>
</div>
`;
